--- a/geojson_add_geno.ipynb
+++ b/geojson_add_geno.ipynb
@@ -409,7 +409,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Modify the argument to the name/location of the new GeoJSOn that needs to be created. "
+        "Modify the argument to the name/location of the new GeoJSON that needs to be created. "
       ],
       "metadata": {
         "id": "yNox9xJHrnaF"
