Added the code to change the year of GeoJSON

--- a/geojson_add_geno.ipynb
+++ b/geojson_add_geno.ipynb
@@ -1,13 +1,14 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "The following statements would import the necessary libraries. If the libraries aren't installed already, use Anaconda or pip to install them. "
-      ],
       "metadata": {
         "id": "sM1jlGjIkaJb"
-      }
+      },
+      "source": [
+        "The following statements would import the necessary libraries. If the libraries aren't installed already, use Anaconda or pip to install them. "
+      ]
     },
     {
       "cell_type": "code",
@@ -22,13 +23,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "Modify the path in the *read_csv()* method to the absolute path for the current season's fieldbook."
-      ],
       "metadata": {
         "id": "d2Q1yRWBn6jF"
-      }
+      },
+      "source": [
+        "Modify the path in the *read_csv()* method to the absolute path for the current season's fieldbook."
+      ]
     },
     {
       "cell_type": "code",
@@ -43,39 +45,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "      year range row    type  rep treatment          species genotype panel  \\\n",
-              "plot                                                                          \n",
-              "5501  2023    55  01  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
-              "5502  2023    55  02  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
-              "5503  2023    55  03  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
-              "5504  2023    55  04  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
-              "5505  2023    55  05  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
-              "...    ...   ...  ..     ...  ...       ...              ...      ...   ...   \n",
-              "9428  2023    94  28  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
-              "9429  2023    94  29  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
-              "9430  2023    94  30  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
-              "9431  2023    94  31  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
-              "9432  2023    94  32  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
-              "\n",
-              "     height  \n",
-              "plot         \n",
-              "5501    NaN  \n",
-              "5502    NaN  \n",
-              "5503    NaN  \n",
-              "5504    NaN  \n",
-              "5505    NaN  \n",
-              "...     ...  \n",
-              "9428    NaN  \n",
-              "9429    NaN  \n",
-              "9430    NaN  \n",
-              "9431    NaN  \n",
-              "9432    NaN  \n",
-              "\n",
-              "[1280 rows x 10 columns]"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-6f9a83fe-92fb-41f8-9b37-6e90fe22b009\">\n",
@@ -347,10 +317,42 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "      year range row    type  rep treatment          species genotype panel  \\\n",
+              "plot                                                                          \n",
+              "5501  2023    55  01  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
+              "5502  2023    55  02  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
+              "5503  2023    55  03  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
+              "5504  2023    55  04  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
+              "5505  2023    55  05  border  NaN        WL  sorghum bicolor     Fill   NaN   \n",
+              "...    ...   ...  ..     ...  ...       ...              ...      ...   ...   \n",
+              "9428  2023    94  28  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
+              "9429  2023    94  29  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
+              "9430  2023    94  30  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
+              "9431  2023    94  31  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
+              "9432  2023    94  32  border  NaN        WW  sorghum bicolor     Fill   NaN   \n",
+              "\n",
+              "     height  \n",
+              "plot         \n",
+              "5501    NaN  \n",
+              "5502    NaN  \n",
+              "5503    NaN  \n",
+              "5504    NaN  \n",
+              "5505    NaN  \n",
+              "...     ...  \n",
+              "9428    NaN  \n",
+              "9429    NaN  \n",
+              "9430    NaN  \n",
+              "9431    NaN  \n",
+              "9432    NaN  \n",
+              "\n",
+              "[1280 rows x 10 columns]"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -359,13 +361,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "Just like the previous read, modify this function's argument to point at the GeoJSON from the previous season that needs to be modified. "
-      ],
       "metadata": {
         "id": "edWftnYWn3fz"
-      }
+      },
+      "source": [
+        "Just like the previous read, modify this function's argument to point at the GeoJSON from the previous season that needs to be modified. "
+      ]
     },
     {
       "cell_type": "code",
@@ -379,13 +382,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "**NOTE**: The columns name, such as 'genotype', 'PI_accession' (both are the same thing) can vary from fieldbook to fieldbook. Please check for any issues, refer the fieldbook, and then update them accordingly."
-      ],
       "metadata": {
         "id": "ZqYGrMx_rC3j"
-      }
+      },
+      "source": [
+        "**NOTE**: The columns name, such as 'genotype', 'PI_accession' (both are the same thing) can vary from fieldbook to fieldbook. Please check for any issues, refer the fieldbook, and then update them accordingly."
+      ]
     },
     {
       "cell_type": "code",
@@ -403,17 +407,19 @@
         "    row_df = df.loc[plot]\n",
         "    geno = row_df['genotype']\n",
         "    #print(plot, geno)\n",
-        "    gj['genotype'][i] = str(geno)"
+        "    gj['genotype'][i] = str(geno)\n",
+        "    gj['year'][i] = row_df['year']"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "Modify the argument to the name/location of the new GeoJSON that needs to be created. "
-      ],
       "metadata": {
         "id": "yNox9xJHrnaF"
-      }
+      },
+      "source": [
+        "Modify the argument to the name/location of the new GeoJSON that needs to be created. "
+      ]
     },
     {
       "cell_type": "code",
@@ -428,6 +434,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -444,9 +453,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.0"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
